assets/common.css
/* ... */
footer {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    background: rgba(255, 255, 255, 0.1);
    backdrop-filter: blur(10px);
    transform: translate3d(0, 0, 0);
    border-top: 1px solid rgba(255, 255, 255, 0.18);
    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
    border-radius: 0px;
    padding: 10px 30px 5px;
    box-sizing: border-box;
    color: var(--color-text);
    z-index: 9999;
    position: static;
    left: unset;
    bottom: unset;
    transition: position 0.2s;

    &.fixed-bottom {
        position: fixed;
        left: 0;
        bottom: 0;
        margin-top: 0;
        width: 100vw;
        max-width: 100vw;
    }

    & span {
        & a {
            color: var(--color-text);
        }

        &.copyright {
            z-index: 4;
            font-style: italic;
            position: absolute;
            right: 30px;
            width: 100%;
            text-align: center;
        }

        &.repo,
        &.contact {
            z-index: 5;
            @media (max-width: 768px) {
                display: none;
            }
        }
    }
}

/*
//
//  MISC
//  ------------------------------------
//
*/

.nomint {
    /* Disable mint background */
    background: none;
    background-clip: none;
    -webkit-background-clip: none;
    -webkit-text-fill-color: var(--color-text);
}

.definition {
    font-size: 1.5rem;
}

.noborder {
    border: none;
}

.bigimage {
    max-width: var(--max-media-width-big);
    max-height: var(--max-media-height-big);
}

.smallimage {
    max-width: var(--max-media-width-small);
    max-height: var(--max-media-height-small);
}

blockquote.centered-blockquote {
    width: fit-content;
    margin-left: auto;
    margin-right: auto;
    font-size: 1.15rem;
}

ul {
    list-style: disc inside;
    padding-left: var(--spacing-lg);

    & li {
        line-height: 1.6;
        transition: color var(--transition-duration-fast)
            var(--transition-timing);
    }
}

iframe {
    display: block;
    border: none;
    width: 100%;
    height: 500px;
    border-radius: var(--radius-lg);
    box-shadow: var(--shadow-article);
    margin-left: auto;
    margin-right: auto;

    &.homepage {
        width: clamp(80%, 100%, 800px);
        height: clamp(30vh, 50vh, 400px);
    }
}

code {
    font-family: var(--font-monospace);
    white-space: pre;
    overflow-x: auto;
    display: block;
}

/*
//
//  KEYFRAMES
//  ------------------------------------
//
*/

@keyframes fadeIn {
    from {
        opacity: 0;
    }

    to {
        opacity: 1;
    }
}

@keyframes slideInFromTop {
    from {
        opacity: 0;
        transform: translateY(-100px);
    }

    to {
        opacity: 1;
        transform: translateY(0);
    }
}

@keyframes articleSlideInFromBottom {
    from {
        opacity: 0;
        transform: translateY(32px);
    }

    to {
        opacity: 1;
        transform: translateY(0);
    }
}

@keyframes timeSlideInFromLeft {
    from {
        opacity: 0;
        transform: translateX(-40px) scale(0.9);
    }

    to {
        opacity: 1;
        transform: translateX(0) scale(1);
    }
}

@keyframes externalLinkReveal {
    from {
        transform: translateX(-30px) scale(0.9);
        opacity: 0;
    }

    to {
        transform: translateX(0) scale(1);
        opacity: 1;
    }
}

@keyframes postTagSlideIn {
    to {
        opacity: 1;
        transform: translateX(0);
    }
}

@keyframes randomBtnSlideInFromLeft {
    from {
        opacity: 0;
        transform: translateX(-60px);
    }

    to {
        opacity: 1;
        transform: translateX(0);
    }
}

@keyframes flyInFromTop {
    to {
        transform: translateX(-50%) translateY(0) translate3d(0, 0, 0);
    }
}

@keyframes flyInFromLeft {
    to {
        transform: translateX(0);
        opacity: 1;
    }
}

@keyframes flyInFromRight {
    to {
        transform: translateX(0);
        opacity: 1;
    }
}

